<resources>
    <string name="app_name">CinemaQuiz</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="title_activity_results">Resultados</string>
    <string name="title_activity_other_games">Otros juegos</string>
    <string name="title_activity_game">Juego</string>
    <string name="new_game">Nueva partida</string>
    <string name="results">Resultados</string>
    <string name="other_games">Otros juegos</string>
    <string name="action_settings">Opciones</string>
    <string name="results_day">Día</string>
    <string name="results_hour">Hora</string>
    <string name="results_success">Aciertos</string>
    <string name="results_fail">Fallos</string>
    <string name="results_percentage">%</string>
    <string name="success_message">¡Correcto!</string>
    <string name="error_message">Has fallado...</string>
    <string name="continue_game">Continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="exit_game">Salir</string>
    <string name="num_success">Aciertos:\t</string>
    <string name="num_errors">Fallos:\t</string>
    <string name="finish_title">Fin de partida</string>
    <string name="finish_message">¡Felicidades! Has respondido todas las preguntas. Pulsa en el botón para volver al menú principal.</string>
    <string name="exit_game_confirmation">¿Estás seguro que quieres salir de la partida?</string>
    <string name="question_num_selection">Número de preguntas</string>
    <string name="question_num_selection_message">¿Cuántas preguntas quieres responder?</string>
    <string name="delete_results">Limpiar resultados</string>
    <string name="delete_results_message">¿Estás seguro que quieres eliminar los resultados?</string>
    <string name="no_results">No hay ningún resultado guardado</string>

    <string-array name="game_selection">
        <item>50</item>
        <item>40</item>
        <item>30</item>
        <item>20</item>
        <item>10</item>
    </string-array>
</resources>
